# speckle-generator

./: .gitignore  README.md  pyproject.toml  speckle.toml
src/examples/: example01_generate_and_save_pattern.py  example03_auto_correlation_peak_sharpness.py  example06_interpolation.py  example08_subpixel_dic_grid_search.ipynb  example09_dicbenchmarks_edgepull.ipynb  example10_dicbenchmarks_hydro.ipynb  example1_generate_and_save_pattern.py  example2_find_spacing.py  example3_auto_correlation_peak_sharpness.py  example4_ssd_global_search.py  example5_image_distortion  example5_ssd_image_flip.py  example6_interpolation.py  example7_distortion.py  example8_subpixel.py  example8_subpixel_dic.py  example8_subpixel_dic_grid_search.ipynb  example8_subpixel_dic_grid_search.py  example9_subpixel_dic_minimzer.py
src/speckle/: __init__.py  analysis.py  correlation.py  dic.py  generate.py  grid.py  image.py  pattern.py
src/testing/: test_using_package.py
