[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speckle"
version = "0.1.0"
description = "A Python Speckle Generator"
authors = [
    {name = "JoelPhys", email = "joel.hirst@ukaea.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]


[tool.setuptools.packages.find]
where = ["src"]